removed stupid tests, removed apache io-utils method dependency